# expense-tracker-web-app

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/controllers/: budget_group_controller.rs  mod.rs  transaction_controller.rs
backend/src/models/: budget_group_model.rs  connect.rs  mod.rs  transaction_model.rs
frontend/: Cargo.toml  index.html  style.css
frontend/src/: exmaple.rs  main.rs
frontend/src/components/: about.rs  add_group.rs  add_transaction.rs  expense.rs  footer.rs  group.rs  layout.rs  login.rs  mod.rs  navbar.rs  sum.rs  video.rs
src/: main.rs
src/controllers/: budget_group_controller.rs  mod.rs
src/models/: budget_group_model.rs  connect.rs
src/templates/: index.hbs  layout.hbs  navbar.hbs
src/templates/expense/: budget_group.hbs
src/templates/partials/: footer.hbs  navbar.hbs
