[package]
name = "expense-tracker"
version = "0.1.0"
authors = ["Cheng Lin <chlin@pdx.edu>"]
edition = "2021"

[dependencies]
actix-web = "4"
handlebars = { version = "4.3.7", features = ["dir_source"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
rusqlite = "0.29.0"