[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew =  { version = "0.20.0", features = ["csr"] }
yew-router = "0.17"
gloo-net = "0.2.6" # for making fetch call
serde = { version = "1.0", features = ["derive"] } # de-serializing JSON response
serde_json = "1.0.96"
wasm-bindgen-futures = "0.4" # For executing Rust Future as a Promise
chrono = "0.4.26"
web-sys = "0.3.63"
serde-wasm-bindgen = "0.5.0"